--- a/config/database.yml
+++ b/config/database.yml
@@ -13,12 +13,12 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: root
-  password: MyNewPass
-  socket: /tmp/mysql.sock
 
 development:
   <<: *default
+  username: root
+  password: MyNewPass
+  socket: /tmp/mysql.sock
   database: bucketListApp_development
 
 # Warning: The database defined as "test" will be erased and
@@ -40,7 +40,7 @@ test:
 # On Heroku and other platform providers, you may have a full connection URL
 # available as an environment variable. For example:
 #
-#   DATABASE_URL="mysql2://myuser:mypass@localhost/somedatabase"
+#   DATABASE_URL="mysql2://root:MyNewPass@localhost/bucketListApp_production"
 #
 # You can use this database configuration with:
 #
